Responsive 2nd Section and 100svh 1st Section, Remade Mobile Nav Bar with Close icon, event.stop propergation, idk what it does but if it aint broke dont fix it, it fixed inconsistent opening and closing nav menu on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,6 @@
 }
 .Phone_menu{
     display: none;
-    border: 1.5px solid rgb(255, 255, 255);
-    border-radius: 5px;
-    padding: 2px 8px;
 }
 .nav_items{
     list-style: none;
@@ -84,18 +81,25 @@
 .Sign_up:hover{
     background-color: #060045;
 }
-
-
-.mobile_menu{
+.Mobile_Nav{
     display: none;
 }
 
 /*-----------IPAD NAV----------*/
-@media(max-width: 1030px){
+@media(max-width: 840px){
     .Phone_menu{
         display: block;
-        z-index: 10px;
+        z-index: 999;
+        position: relative;
+        font-size: 20px;
     }
+    .Desktop_Nav{
+        display: none;
+    }
+    .nav_buttons{
+        display: none;
+    }
+
     .Navigation_bar{
         justify-content: flex-start;
         padding: 15px 20px;
@@ -106,28 +110,33 @@
         margin-right: auto;
         margin-bottom: 0;
     }
-    .nav_buttons{
-        display: none;
-    }
-    .nav_items{
-        display: block;
+    
+    .Mobile_Nav{
         position: absolute;
-        padding: 10px 0;
-        margin-top: 20px;
+        display: block;
+        z-index: 95;
+        top: 50;
         right: 0;
         width: 0%;
+        height: 100svh;
         background-color: #060045;
-        height: 394.5px;
-        z-index: 9px;
-        text-align: center;
-        transition: width ease-in-out 0.3s;
+        padding: 0;
+        transition: width ease 0.3s;
     }
-    .nav_items.active{
+    .Mobile_Nav.active{
         width: 40%;
     }
-    .mobile_menu{
+
+    .nav_items{
         display: block;
+        padding: 10px 0;
+        text-align: center;
     }
+    
+
+    
+    
+    
     .nav_links{
         width: max-content;
         color: white;
@@ -156,13 +165,8 @@
 /*---------------IPHONE 12/13 PRO MAX------------*/
 @media(max-width: 430px){
     
-    .nav_items.active{
-        width: 50%;
-    }
-
-    .nav_items.active{
-        width: 50%;
-        height: 828.5px;
+    .Mobile_Nav.active{
+        width: 55%;
     }
 }
 
@@ -250,6 +254,12 @@ margin-bottom: 10px;
         top: 9px;
         right: 15px;
     }
+    .hero_getstarted i{
+        display: none;
+    }
+    .hero_getstarted{
+        padding-right: 12px;
+    }
 }
 /*-------------IPAD 11 PRO-------*/
 @media(max-width: 1030px){
@@ -264,7 +274,6 @@ margin-bottom: 10px;
     }
     .hero_getstarted{
         font-size: 14px;
-        padding: 10px 40px 10px 10px;
     }
     .Learn_More{
         font-size: 14px;
@@ -273,13 +282,17 @@ margin-bottom: 10px;
 }
 /*------------IPHONE 12/13 PRO MAX----------*/
 @media(max-width: 430px){
-
+    .First_Section{
+        height: 100svh;
+        overflow: hidden;
+    }
     .hero{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         margin-top: 25px;
+        overflow: hidden;
     }
     .hero_textcontent{
         width: 100%;
@@ -293,7 +306,7 @@ margin-bottom: 10px;
     }
     
     .hero_image{
-        width: 80%;
+        width: 100%;
     }
     .hero_image img{
         width: 100%;
@@ -305,13 +318,10 @@ margin-bottom: 10px;
 
     .hero_getstarted{
         font-size: 14px;
-        padding: 10px 40px 10px 10px;
+        padding: 10px 15px;
+        margin-right: 10px;
     }
-    .signup_arrow{
-        position: absolute;
-        top: 7.5px;
-        right: 15px;
-    }
+    
     .Learn_More{
         font-size: 14px;
         padding: 10px 15px;
@@ -326,11 +336,20 @@ margin-bottom: 10px;
         width: 50%;
     }
 }
+/*-------IPHONE 11 PRO MAX------*/
+@media(max-width: 415px){
+    .hero_image{
+        width: 100%;
+    }
+}
 /*------------IPHONE 12/13+ PRO-------------*/
 @media(max-width: 400px){
     
     .hero_textcontent h1{
     font-size: 38px;
+    }
+    .hero_image{
+        width: 90%;
     }
     
 
@@ -342,8 +361,12 @@ margin-bottom: 10px;
     .hero_textcontent h1{
         font-size: 35px;
     }
+    .hero_textcontent >  p{
+        padding: 0 5px;
+    }
+
     .hero_image{
-        width: 75%;
+        width: 90%;
     }
 }
 
@@ -438,7 +461,87 @@ margin-bottom: 10px;
     background-color: #060045;
 }
 
+@media(max-width: 1030px){
+    .Second_section{
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        gap: 70px;
+    }
+    .Second_section .S_S_Content{
+        width: 100%;
+    }
+    .S_S_Content > p{
+        width: 75%;
+    }
+    .Second_S_card_container{
+        display: flex;
+        justify-content: flex-start;
+        gap: 10px; 
+    }
+    .S_S_Content .each_card{
+        gap: 20px;
+        padding: 10px;
+        font-size: 13px;
+    }
+}
+@media(max-width: 840px){
+    .S_S_Content > p{
+        width: 100%;
+    }
+    .Second_S_card_container{
+        gap: 20px;
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+    .S_S_Content .each_card{
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        width: 500px;
+        margin-bottom: 0;
+        font-size: 14px;
+        border-bottom: 5px solid #091057;
+    }
+    .each_card .text_content > p{
+        padding: 0 20px;
+    }
+    
+    .S_S_Content .each_card .text_content > h4{
+        text-align: center;
+        font-weight: bold;
+        color: #091057;
+    }
 
+}
+/*----------IPHONE 12 PRO MAX--------*/
+@media(max-width: 430px){
+    .Second_section{
+        margin-top: 30px;
+    }
+    .Second_S_card_container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .S_S_Content .each_card{
+        width: 320px;
+    }
+    .each_card .text_content > p{
+        padding: 0 10px;
+    }
+    .Second_second_Image{
+        display: none;
+    }
+
+}
+
+@media(max-width: 400px){
+    .S_S_Content .each_card{
+        width: 300px;
+    }
+    
+}
 
 
 
